// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MainSplit/> renders 1`] = `
<DocumentFragment>
  <div
    class="mx_MainSplit"
  >
    <div>
      Child
      <span>
        Foo
      </span>
      Bar
    </div>
    <div
      class="mx_RightPanel_ResizeWrapper"
      style="position: relative; user-select: auto; width: 320px; height: 100%; max-width: 50%; min-width: 320px; box-sizing: border-box; flex-shrink: 0;"
    >
      <div>
        Right panel
      </div>
      <div>
        <div
          class="mx_ResizeHandle--horizontal"
          style="position: absolute; user-select: none; width: 10px; height: 100%; top: 0px; left: -5px; cursor: col-resize;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<MainSplit/> respects defaultSize prop 1`] = `
<DocumentFragment>
  <div
    class="mx_MainSplit"
  >
    <div>
      Child
      <span>
        Foo
      </span>
      Bar
    </div>
    <div
      class="mx_RightPanel_ResizeWrapper"
      style="position: relative; user-select: auto; width: 500px; height: 100%; max-width: 50%; min-width: 320px; box-sizing: border-box; flex-shrink: 0;"
    >
      <div>
        Right panel
      </div>
      <div>
        <div
          class="mx_ResizeHandle--horizontal"
          style="position: absolute; user-select: none; width: 10px; height: 100%; top: 0px; left: -5px; cursor: col-resize;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
